Fix some Sonar issues